add score variable and additional rule

--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
 </head>
 <body>
     <h1>
-        <button type="button" onclick='startGame()'>Start Game</button>
+        <button type="button" onclick='rollDice()'>Roll Dice</button>
+        <button type="button" onclick='stopGame()'>Stop Game</button>
     </h1>
+    <h2>The point of the game is get the highest score without rolling double</h2>
+    <h3>Game Rules</h3>
+    <h4>
+        <ul>
+            <li>Click the "Roll Dice" button to start the game, then keep clicking the blue "ok" button to continue rolling</li>
+            <li>The number on the dice you roll gets added to your score</li>
+            <li>If you roll doubles, the game immideialty ends and you're left with a zero score</li>
+            <li>You can stop the game anytime and lock in your score by hitting the "stop" button</li>
+
+        </ul>
+    </h4>
 
 
 
